<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/top_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="20dp">

    <TextView
        android:id="@+id/teamnametitle_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:maxWidth="200dp"
        android:singleLine="true"
        android:text="@string/team_name"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/winstitle_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/winstitle_textview"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/wins"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/sort_descending"
        app:layout_constraintBottom_toBottomOf="@+id/teamnametitle_textview"
        app:layout_constraintEnd_toStartOf="@+id/lossestitle_textview"
        app:layout_constraintTop_toTopOf="@+id/teamnametitle_textview" />

    <TextView
        android:id="@+id/lossestitle_textview"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/loses"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/sort_descending"
        app:layout_constraintBottom_toBottomOf="@+id/teamnametitle_textview"
        app:layout_constraintEnd_toStartOf="@+id/drawstitle_textview"
        app:layout_constraintTop_toTopOf="@+id/teamnametitle_textview" />

    <TextView
        android:id="@+id/drawstitle_textview"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/draws"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/sort_descending"
        app:layout_constraintBottom_toBottomOf="@+id/teamnametitle_textview"
        app:layout_constraintEnd_toStartOf="@+id/winspercentagetitle_textview"
        app:layout_constraintTop_toTopOf="@+id/teamnametitle_textview" />

    <TextView
        android:id="@+id/winspercentagetitle_textview"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/wins_per"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/sort_descending"
        app:layout_constraintBottom_toBottomOf="@+id/teamnametitle_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/teamnametitle_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>